--- a/public/index2.css
+++ b/public/index2.css
@@ -508,7 +508,7 @@
     .nav-links {
         display: none;
         flex-direction: column;
-        background-color: #007bff;
+        background-color: #0f172a;
         position: fixed;  
         top: 60px; 
         left: 0;
@@ -561,7 +561,7 @@
         top: 60px;
         right: 0;
         width: 100%;
-        background: #007bff;
+        background: #0f172a;
         align-items: center;
         padding: 15px 0;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -595,7 +595,7 @@
   .nav-links {
     display: none;
     flex-direction: column;
-    background-color: #007bff;
+    background-color: #0f172a;
     position: fixed;
     top: 60px;
     left: 0;
